2008-06-25  Matthew Allum  <mallum@openedhand.com>

	* clutter/eglnative/clutter-stage-egl.c:
	* clutter/eglx/clutter-stage-egl.c: 
        Disable passing of attribs to eglCreateContext() on GLES 1.1 h/w

2008-06-25  Neil Roberts  <neil@o-hand.com>

	* clutter/clutter-actor.c (clutter_actor_paint): Guard against the
	actor clip being enabled or disabled in an actor paint
	method. Otherwise the clip stack can be become unbalanced. This
	was happening in ClutterEntry until it was fixed in revision 2983.

2008-06-24  Neil Roberts  <neil@o-hand.com>

	Bug 979 - Wrong call convension for SwapIntervalProc in win32 backend

	* clutter/win32/clutter-backend-win32.c: Use the correct calling
	convention for SwapInterval. Thanks to Haakon Sporsheim.

2008-06-24  Emmanuele Bassi  <ebassi@openedhand.com>

	Bug 989 - Add a search path for clutter script assets

	* clutter/clutter-script.h:
	* clutter/clutter-script.c:
	(clutter_script_finalize),
	(clutter_script_add_search_paths),
	(clutter_script_lookup_filename): Add the ability to define multiple
	search paths inside ClutterScript and to look up a specific filename
	inside those search paths. This is useful to define a set of
	directories where the assets for a UI definition are and still
	reference those assets by their name instead of the full path. (989,
	based on a patch by Matthew Allum)

	* clutter/clutter-texture.c:
	(clutter_texture_set_custom_property): Use the newly added
	clutter_script_lookup_filename() function.

2008-06-24  Neil Roberts  <neil@o-hand.com>

	* clutter/cogl/gles/cogl-gles2-wrapper.h: 
	* clutter/cogl/gles/cogl-gles2-wrapper.c: All of the settings and
	uniforms are now proxied into COGL variables instead of setting
	the GL uniforms directly. Just before glDrawArrays is executed a
	shader is generated using the given settings to avoid using 'if'
	statements. The shaders are cached.

	* clutter/cogl/gles/cogl-fixed-vertex-shader.glsl: 